--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-HellO world!
+<div>
+  <div id="banner"></div>
+  <div>
+    logo submit
+  </div>
+  <div>
+    logo infos
+  </div>
+</div>
