rspec install + service specs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <header>
+    <br><br>
+    <%= render 'layouts/navbar' %>
     <%= render 'layouts/flash' %>
   </header>
   <body>
