--- a/app/views/gateways/user.html.erb
+++ b/app/views/gateways/user.html.erb
@@ -1,7 +1,11 @@
-<h1>Bienvenue Visiteur</h1>
-<h3>Veuillez renseigner le Mot de Passe pour accéder au site </h3>
+<div class="gateway-container">
+  <h1>Bienvenue Visiteur</h1>
+  <h3>Veuillez renseigner le Mot de Passe pour accéder au site </h3>
 
-<%= render partial: 'gateways/form', locals: {is_admin: false} %>
+  <div class="gateway-form">
+    <%= render partial: 'gateways/form', locals: { is_admin: false } %>
+  </div>
 
-<br><br>
-<%= link_to 'ADMIN', gateways_admin_path %>
+  <%= link_to 'ADMIN', gateways_admin_path %>
+
+</div>
