--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,3 @@
 <div>
-  <div id="banner"></div>
-  <div>
-    logo submit
-  </div>
-  <div>
-    logo infos
-  </div>
+  <h4>HOME PAGE</h4>
 </div>
