--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid">
-    <%= link_to 'Home', root_path, class: 'navbar-brand'%>
+    <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+    <% if admin_signed_in? %>
+      <%= link_to 'Dashboard Admin', administration_dashboard_path, class: 'navbar-brand' %>
+    <% end %>
     <%= link_to 'Se déconnecter', gateways_disconnect_path, method: :post, class: 'nav-brand' %>
   </div>
 </nav>
