--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,6 +2,9 @@
   <div class="container-fluid">
     <%= link_to 'Home', root_path, class: 'navbar-brand' %>
     <%= link_to 'Villes', cities_path, class: 'navbar-brand' %>
+    <%= link_to 'Remboursements', static_pages_refund_path, class: 'navbar-brand' %>
+    <%= link_to 'Ajouter une addresse', root_path, class: 'navbar-brand' %>
+
     <% if admin_signed_in? %>
       <%= link_to 'Dashboard Admin', administration_dashboard_path, class: 'navbar-brand' %>
     <% end %>
