[FEATURE] refund logo

--- a/app/views/static_pages/refund.html.erb
+++ b/app/views/static_pages/refund.html.erb
@@ -1,8 +1,12 @@
-<div>
-  <h3> Plafonds des remboursements :</h3>
-  <br>
-  <p> Nuitée : 74 euros (petit-déjeuner compris dans la limite de 6 euros) </p>
-  <p> Repas du soir : 24 euros sur justificatif de restaurant ou de courses </p>
-  <p> Attention, le repas du midi est remboursé sur justificatif uniquement en cas de tournage à plus de 50 kilomètres
-    ! </p>
+<div class="space-between">
+  <%= image_tag('refund.png') %>
+
+  <div>
+    <h3> Plafonds des remboursements :</h3>
+    <br>
+    <p> Nuitée : 74 euros (petit-déjeuner compris dans la limite de 6 euros) </p>
+    <p> Repas du soir : 24 euros sur justificatif de restaurant ou de courses </p>
+    <p> Attention, le repas du midi est remboursé sur justificatif uniquement en cas de tournage à plus de 50 kilomètres
+      ! </p>
+  </div>
 </div>
