--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,3 +5,9 @@
   background-position: center center;
   height: 230px;
 }
+
+.space-between {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
