restaurant model spec

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,7 +6,7 @@
   height: 230px;
 }
 
-.space-between {
+.space-around {
   display: flex;
   justify-content: space-around;
   align-items: center;
