--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,24 @@
 <div class="container">
   <div class="center">
+
+    <div>
+
+      <%= form_tag(search_path, method: 'get') do %>
+        <div class="input-group">
+          <%= search_field_tag :search, params[:search], placeholder: "Rechercher", class: "form-control" %>
+        </div>
+        <div class="input-group">
+           <%= collection_select :city, :id, City.all.order('name ASC'), :id, :name,{include_blank: 'Selectionner une ville'} %>
+        </div>
+        <div class="input-group">
+          <%= check_box_tag 'vegan', :search, params[:search] %>
+        </div>
+          <div class="input-group-btn">
+            <%= button_tag "Rechercher un restaurant", name: nil  %>
+          </div>
+      <% end %>
+    </div>
+
     <h1 class= "my-4">Liste des Restaurants</h1>
     <%@restaurants.each do |restau| %>
       <h4><%= restau.name %></h4>
