--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,13 +5,16 @@
 
       <%= form_tag(search_path, method: 'get') do %>
         <div class="input-group">
+          <%= label_tag :search, "Rechercher par nom" %>
           <%= search_field_tag :search, params[:search], placeholder: "Rechercher", class: "form-control" %>
         </div>
         <div class="input-group">
+          <%= label_tag :search, "Rechercher par ville" %>
            <%= collection_select :city, :id, City.all.order('name ASC'), :id, :name,{include_blank: 'Selectionner une ville'} %>
         </div>
         <div class="input-group">
-          <%= check_box_tag 'vegan', :search, params[:search] %>
+          <%= label_tag :vegan, "Vegan ?" %>
+          <%= check_box_tag :vegan %>
         </div>
           <div class="input-group-btn">
             <%= button_tag "Rechercher un restaurant", name: nil  %>
