--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,12 +5,12 @@
 
       <%= form_tag(search_path, method: 'get') do %>
         <div class="input-group">
-          <%= label_tag :search, "Rechercher par nom" %>
-          <%= search_field_tag :search, params[:search], placeholder: "Rechercher", class: "form-control" %>
+          <%= label_tag :name, "Rechercher par nom" %>
+          <%= search_field_tag :name, nil, placeholder: "Rechercher", class: "form-control" %>
         </div>
         <div class="input-group">
-          <%= label_tag :search, "Rechercher par ville" %>
-           <%= collection_select :city, :id, City.all.order('name ASC'), :id, :name,{include_blank: 'Selectionner une ville'} %>
+          <%= label_tag :city_restaurants, "Rechercher par ville" %>
+           <%= collection_select :city_restaurants, :city_id, City.all.order('name ASC'), :id, :name, {include_blank: 'Selectionner une ville'} %>
         </div>
         <div class="input-group">
           <%= label_tag :vegan, "Vegan ?" %>
@@ -23,7 +23,7 @@
     </div>
 
     <h1 class= "my-4">Liste des Restaurants</h1>
-    <%@restaurants.each do |restau| %>
+    <% restaurants.each do |restau| %>
       <h4><%= restau.name %></h4>
       <p><%= link_to "Voir les détails du restaurant", restaurant_path(restau) %></p>
     <% end %>
