--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -1,5 +1,5 @@
 <h3>Résultats de la recherche</h3>
 
 <% @results.each do |result| %>
-  <%= result.name %> <br>
+  <%= render 'restaurant', restaurant: result  %>
 <% end %>
