--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,7 +3,7 @@
 
     <div>
 
-      <%= form_tag(search_path, method: 'get') do %>
+      <%= form_tag(restaurants_path, method: 'get') do %>
         <div class="input-group">
           <%= label_tag :name, "Rechercher par nom" %>
           <%= search_field_tag :name, nil, placeholder: "Rechercher", class: "form-control" %>
@@ -21,7 +21,14 @@
         </div>
       <% end %>
     </div>
+<% if @results != nil %>
+<h3>Résultats de la recherche</h3>
 
+<% @results.each do |result| %>
+  <%= render 'restaurant', restaurant: result  %>
+<% end %>
+
+<% end %>
     <h1 class= "my-4">Liste des Restaurants</h1>
     <% restaurants.each do |restau| %>
       <h4><%= restau.name %></h4>
