Create service Housing to filter search, add specs for location, city and housing, and front

--- a/app/views/housings/_list.html.erb
+++ b/app/views/housings/_list.html.erb
@@ -1,6 +1,7 @@
 <div class="card mt-2 mt-md-4" style="width: 18rem;margin-left: 2%;">
-  <div class="card-body3">
+  <div class="card-body">
     <h5 class="card-title">Card title</h5>
+    <p class="card-text">Petit déjeuner ? : <%= housing.breakfast %>
     <p class="card-text">type de couchage : <%= housing.housing_type %></p>
     <p class="card-text">Adresse : <%= housing.location.get_full_address %></p>
     <p class="card-text">Ville : <%= housing.city.name %></p>
