--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,6 +2,7 @@
   <div class="container-fluid">
     <%= link_to 'Home', root_path, class: 'navbar-brand' %>
     <%= link_to 'Villes', cities_path, class: 'navbar-brand' %>
+    <%= link_to 'Couchages', housings_path, class: 'navbar-brand' %>
     <%= link_to 'Remboursements', static_pages_refund_path, class: 'navbar-brand' %>
     <%= link_to 'Ajouter une addresse', root_path, class: 'navbar-brand' %>
 
