card info et lien

--- a/app/views/restaurants/_list.html.erb
+++ b/app/views/restaurants/_list.html.erb
@@ -1,14 +1,20 @@
-<div class="container">
-  <div class="center">
-    <h1 class="my-4"><%= restaurant.name  %></h1>
+<div class="card" style="width: 18rem;">
+<img src="..." class="card-img-top" alt="...">
+<div class="center">
+  <h5 class="card-title"><%= restaurant.name  %></h5>
+  <div> Localisation</div>
+<div class="center">
+</div>
+<div class="card-body">
+  <p>Type de cuisine : <%= restaurant.kitchen %></p>
+  <p>Végétatien ?<%= is_vegan(restaurant) %></p>
+  <p> Numero de rue : <%= restaurant.location.street_number %> <%= restaurant.location.address %></p>
+  <p> Zip_code : <%= restaurant.location.zip_code %></p>
+  <p> Ville : <%= restaurant.city.name %></p>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
-    <p>Type de cuisine : <%= restaurant.kitchen %></p>
-    <p>Végétatien ?<%= is_vegan(restaurant) %></p>
+<a href="#" class="btn btn-primary">Go somewhere</a>
+<%=link_to  'show de city'%>
+</div>
 
-    <br>
-    <div> Localisation</div>
-    <p> Numero de rue : <%= restaurant.location.street_number %> <%= restaurant.location.address %></p>
-    <p> Zip_code : <%= restaurant.location.zip_code %></p>
-    <p> Ville : <%= restaurant.city.name %></p>
-  </div>
 </div>
