--- a/app/views/housings/index.html.erb
+++ b/app/views/housings/index.html.erb
@@ -10,7 +10,7 @@
   <hr>
 
   <div class="row justify-content-center mt-4">
-    <% @housings.each do |housing| %>
+    <% housings.each do |housing| %>
       <%= render partial: 'housings/list', locals: { housing: housing } %>
     <% end %>
   </div>
