--- a/app/views/housings/index.html.erb
+++ b/app/views/housings/index.html.erb
@@ -1,18 +1,13 @@
 <div class="container">
   <h1 class="text-center">Tous les Couchages</h1>
-
-  <hr>
-
-  <div class="container">
-      <%= render partial: 'housings/search_filter' %>
+  <div>
+    <%= render partial: 'housings/search_filter' %>
   </div>
-
-  <hr>
-
   <div class="row justify-content-center mt-4">
     <% housings.each do |housing| %>
-      <%= render partial: 'housings/list', locals: { housing: housing } %>
+      <div class="col-md-4">
+        <%= render partial: 'housings/list', locals: { housing: housing } %>
+      </div>
     <% end %>
   </div>
-
 </div>
