--- a/app/views/housings/show.html.erb
+++ b/app/views/housings/show.html.erb
@@ -2,6 +2,8 @@
   <h2 class="text-center"> Ville du couchage : <%= housing.city.name %></h2>
 
   <div class="row justify-content-center">
-    <%= render partial: 'housings/list' %>
+    <div class="col-12 col-md-6">
+      <%= render partial: 'housings/list' %>
+    </div>
   </div>
 </div>
