--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,5 +1,9 @@
-<h2> Page de la ville: <%= city.name %></h2>
+<h2 class="center-h2 mt-30"> Page de la ville: <%= city.name %></h2>
 
-<div>
-  <%= render partial: 'cities/list' %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
+      <%= render partial: 'cities/list' %>
+    </div>
+  <div>
 </div>
