--- a/app/assets/stylesheets/gateways.scss
+++ b/app/assets/stylesheets/gateways.scss
@@ -1,8 +1,16 @@
-.gateway-container {
+.gateway-container  {
   text-align: center;
   margin-top: 30px;
 }
 
 .gateway-form {
   margin: 30px;
+}
+
+.center-h2 {
+  text-align: center;
+}
+
+.mt-30 {
+  margin-top: 30px;
 }
