--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,10 @@
-  <%= render 'restaurants/list' %>
-  <%=link_to 'ville',city_path%>
+<div class="container">
+  <h2 class="center-h2 mt-30"> Page du restaurant: <%= restaurant.name %></h2>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
+      <div class="card-body">
+        <%= render 'restaurants/list' %>
+      </div>
+    </div>
+  </div>
+
