--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,10 @@
+<h2 class="center-h2 mt-30"> Page du restaurant: <%= restaurant.name %></h2>
 <div class="container">
-  <h2 class="center-h2 mt-30"> Page du restaurant: <%= restaurant.name %></h2>
   <div class="row justify-content-center">
     <div class="col-12 col-md-6">
-      <div class="card-body">
+      <div class="card-body border border-dark">
         <%= render 'restaurants/list' %>
+        <%=link_to 'index restaurants',restaurants_path, class:"btn btn-primary"%>
       </div>
-    </div>
   </div>
-
+</div>
