--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -4,10 +4,10 @@
   <div class="row tex-center">
     <% cities.each do |city| %>
       <div class="col-12 col-md-4 ">
-         <div class="card-body"> 
+         <div class="card-body mt-30 border border-dark"> 
             <%= render partial: 'cities/list', locals: { city: city } %>
               <div class="col">   
-                <%= link_to 'show', city_path(city), class:"btn btn-primary" %>
+                <%= link_to 'Détails', city_path(city), class:"btn btn-primary" %>
               </div>
          </div>
       </div>   
