--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-6">
-      <div class="card-body"> 
+      <div class="card-body border border-dark"> 
         <%= render partial: 'cities/list' %>
         <%= link_to 'Revenir sur la liste des villes', cities_path, class:"btn btn-primary" %>
       </div>  
