add button citie add margin-top card

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container border border-5">
+<div class="container">
 <h3 class="text-center md-4">Filtres </h3>
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-4">
@@ -20,11 +20,12 @@
   <% end %>
   </div>
 </div>
-<div class="container border border-5">
+<br>
+<div class="container">
   <div class="row text-center">
     <% restaurants.each do |restaurant| %>
     <div class="col-12 col-md-3">
-    <div class="card-body border border-dark"> 
+    <div class="card-body border border-dark" style="margin-top: 10%;"> 
       <%= render 'restaurants/list', restaurant: restaurant %>
       <%=link_to 'show',restaurant_path(restaurant), class:"btn btn-primary"%>
     </div>
