--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,6 +5,7 @@
       <div class="card-body border border-dark">
         <%= render 'restaurants/list' %>
         <%=link_to 'index restaurants',restaurants_path, class:"btn btn-primary"%>
+        <%=link_to 'show ville',city_path, class:"btn btn-primary"%>
       </div>
   </div>
 </div>
