fix translation status enum for admin review

--- a/app/views/administration/admin_reviews/_list.html.erb
+++ b/app/views/administration/admin_reviews/_list.html.erb
@@ -2,6 +2,6 @@
 <p class="card-text">Prénom : <%= admin_review.first_name %></p>
 <p class="card-text">Nom : <%= admin_review.last_name %></p>
 <p class="card-text">Commentaires : <%= admin_review.comment %>
-<p class="card-text">Status : <%= admin_review.status %></p>
-<p class="card-text">Email : <%= admin_review.admin.email %></p>
+<p class="card-text">Status : <%= admin_review.status_french %></p>
+<p class="card-text">Email : <%= admin_review.email %></p>
 <p class="card-text">Type de message : <%= admin_review.reviewable_type %></p>
