add translation for housing enum and breakfast

--- a/app/views/housings/_list.html.erb
+++ b/app/views/housings/_list.html.erb
@@ -3,10 +3,10 @@
     <h5 class="card-title text-center">Card title</h5>
       <div class="row flex-column">
         <div class="col">
-          <p class="card-text">Petit déjeuner ? : <%= housing.breakfast %>
+          <p class="card-text">Petit déjeuner ? : <%= housing.breakfast_french %>
         </div>
         <div class="col">
-          <p class="card-text">type de couchage : <%= housing.housing_type %></p>
+          <p class="card-text">type de couchage : <%= housing.housing_type_french %></p>
         </div>
         <div class="col">
           <p class="card-text">Adresse : <%= housing.location.full_address %></p>
