presque finish edit of admin review

--- a/app/views/administration/admin_reviews/edit.html.erb
+++ b/app/views/administration/admin_reviews/edit.html.erb
@@ -1,1 +1,9 @@
-<h1>Edit Admin Reviews</h1>
+<div class="container">
+  <h1 class="text-center">Modifier la Review</h1>
+
+  <hr>
+
+  <div class="row flex-column text-center">
+    <%= render partial: 'form', locals: { admin_review: admin_review } %>
+  </div>
+</div>
