--- a/app/views/administration/admin_reviews/_list.html.erb
+++ b/app/views/administration/admin_reviews/_list.html.erb
@@ -5,3 +5,4 @@
 <p class="card-text">Status : <%= admin_review.status_french %></p>
 <p class="card-text">Email : <%= admin_review.email %></p>
 <p class="card-text">Type de message : <%= admin_review.reviewable_type %></p>
+<%= link_to 'Modifier', edit_administration_admin_review_path(admin_review)%>
