--- a/app/views/administration/admin_reviews/show.html.erb
+++ b/app/views/administration/admin_reviews/show.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center"> <%= admin_review.first_name %> <%= admin_review.last_name %>(<%= admin_review.status %>)</h2>
+<h2 class="text-center">Demande de validation par: <%= admin_review.first_name %> <%= admin_review.last_name %>(<%= admin_review.status %>)</h2>
 
 <div class="container">
   <div class="row justify-content-center mt-4">
