--- a/app/views/administration/admin_reviews/_form.html.erb
+++ b/app/views/administration/admin_reviews/_form.html.erb
@@ -38,14 +38,11 @@
       <div class="form-group">
         <div class="d-flex justify-content-between">
           <div class="form-label"> Status :</div>
-          <%= form.select :status, options_for_select(AdminReview.statuses.invert, params[:status] | form.object) %>
+          <%= form.select :status, options_for_select(enum_french_for_edit(enum: AdminReview.statuses, model_name: 'admin_review', attribut: 'status'), params[:status]), include_blank: "Tous les status" %>
         </div>
       </div>
     </div>
   </div>
-  <%# form.hidden_field :admin_id, params[:admin_id] %>
-  <%# form.hidden_field :reviewable_id, params[:reviewable_id] %>
-  <%# form.hidden_field :reviewable_type, params[:reviewable_type]%>
   <div class="text-center mt-4">
     <%= form.submit %>
   </div>
