--- a/app/views/restaurants/_list.html.erb
+++ b/app/views/restaurants/_list.html.erb
@@ -1,11 +1,13 @@
-<div class="col-12 col-md-3">
+<div class="col-12 col-md-3 mt-2">
   <div class="card" style="width: 20rem; height: 13rem;">
     <div class="card-body">
       <h5 class="card-title"><%= restaurant.name %></h5>
       <h6 class="card-subtitle mb-2 text-muted"><%= restaurant.kitchen %> (<%= is_vegan(restaurant) %>)</h6>
       <p class="card-text">Adresse: <%= restaurant.location.full_address %></p>
 
-      <%= link_to 'Restaurant', restaurant_path(restaurant), class: 'card-link' %>
+      <% unless current_page?(restaurant_path(restaurant)) %>
+        <%= link_to 'Détails', restaurant_path(restaurant), class: 'card-link' %>
+      <% end %>
       <%= link_to 'Ville', city_path(restaurant.city), class: 'card-link' %>
       <%= link_to 'Retour', :back, class: 'card-link' %>
     </div>
