--- a/app/views/cities/_list.html.erb
+++ b/app/views/cities/_list.html.erb
@@ -1,3 +1,20 @@
-<div>
-  <div><%= city.name %> <%= link_to 'Modifier', edit_city_path(city) %>  </div>
+<div class="col-12 col-md-3 mt-2">
+  <div class="card" style="width: 20rem; height: 13rem;">
+    <div class="card-body">
+      <h5 class="card-title"><%= city.name %></h5>
+      <h6 class="card-subtitle mb-2 text-muted"><%= city.name %></h6>
+      <p class="card-text"><%= city.housings.count %> Logements</p>
+      <p class="card-text"><%= city.restaurants.count %> Restaurants</p>
+
+      <% unless current_page?(city_path(city)) %>
+        <%= link_to 'Détails', city_path(city), class: 'card-link' %>
+      <% end %>
+
+      <% if current_page?(city_path(city)) %>
+        <%= link_to 'Modifier', edit_city_path(city), class: 'card-link' %>
+      <% end %>
+
+      <%= link_to 'Retour', :back, class: 'card-link' %>
+    </div>
+  </div>
 </div>
