--- a/app/views/cities/_list.html.erb
+++ b/app/views/cities/_list.html.erb
@@ -1,4 +1,4 @@
-<div class="col-12 col-md-3 mt-2">
+<div class="col-md mt-2">
   <div class="card" style="width: 20rem; height: 13rem;">
     <div class="card-body">
       <h5 class="card-title"><%= city.name %></h5>
