--- a/app/views/administration/admin_reviews/index.html.erb
+++ b/app/views/administration/admin_reviews/index.html.erb
@@ -15,11 +15,10 @@
         <div class="card mt-2 mt-md-4" style="margin-left: 2%;">
           <div class="card-body">
             <%= render partial: 'list', locals: { admin_review: admin_review } %>
-            <%= link_to 'Voir', administration_admin_review_path(admin_review), class:"btn btn-primary" %>
+            <%= link_to 'Voir Détails', administration_admin_review_path(admin_review), class: "btn btn-primary" %>
           </div>
         </div>
       </div>
     <% end %>
   </div>
-
 </div>
