--- a/app/views/administration/admin_reviews/show.html.erb
+++ b/app/views/administration/admin_reviews/show.html.erb
@@ -1,4 +1,7 @@
-<h2 class="text-center">Demande de validation par: <%= admin_review.first_name %> <%= admin_review.last_name %>(<%= admin_review.status %>)</h2>
+<h2 class="text-center">Demande de validation par: <%= admin_review.full_name %></h2>
+
+<h4> Type de Review: <%= admin_review.reviewable_type %></h4>
+<h4> Status: <%= admin_review.status_fr %></h4>
 
 <div class="container">
   <div class="row justify-content-center align-items-center mt-4">
